tp04/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api-deployment
  labels:
    app : my-api-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: my-api-deployment
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: my-api-deployment
    spec:
      containers:
      - name: my-api-deployment
        image: registry.cluster.wik.cloud/public/echo
        ports:
        - containerPort: 8080
