tp04/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-api
spec:
  containers:
  - name: my-api
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080
