tp04/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api-service
spec:
  selector:
    app: my-api-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
